# backend/problem/ent/schema/problem.go
@@ -3,7 +3,6 @@ package schema
 import (
 	"entgo.io/ent"
 	"entgo.io/ent/schema/field"
-	"time"
 )
 
 // Problem holds the schema definition for the Problem entity.
@@ -15,13 +14,9 @@ type Problem struct {
 func (Problem) Fields() []ent.Field {
 	return []ent.Field{
 		field.String("uuid"),
-		field.Int("difficulty"),
-		field.String("language"),
-		field.Text("statement").Optional(),
-		field.Text("examples").Optional(),
-		field.Strings("constraints").Optional(),
-		field.Strings("evaluation_criteria").Optional(),
-		field.Time("created_at").Default(time.Now).Immutable(),
+		field.String("title").Optional(),
+		field.Text("content").Optional(),
+		field.String("request_id"),
 	}
 }
 
